--- a/ext/css/pitch-accents-preview.css
+++ b/ext/css/pitch-accents-preview.css
@@ -15,6 +15,14 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+:root {
+    --font-size-no-units: 14;
+    --font-size: calc(1px * var(--font-size-no-units));
+
+    --line-height-no-units: 20;
+    --line-height: calc(var(--line-height-no-units) / var(--font-size-no-units));
+}
+
 html {
     background-color: transparent;
     color: #333333;
@@ -28,8 +36,8 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    line-height: calc(20 / 14);
+    font-size: var(--font-size);
+    line-height: var(--line-height);
 }
 ul {
     margin: 0;
